--- a/packages/MyApp/package.json
+++ b/packages/MyApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backgroom",
+  "name": "MyApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,17 +12,16 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-native-slider": "^0.11.0",
-    "react-native-video": "^5.1.1"
+    "react-native-template-": "thecodingmachine/react-native-boilerplate"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.2",
-    "@babel/runtime": "^7.14.0",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.26.0",
+    "eslint": "7.14.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.0",
+    "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1"
   },
   "jest": {
