--- a/packages/backgroom/package.json
+++ b/packages/backgroom/package.json
@@ -7,12 +7,14 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "bundle-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res"
   },
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-slider": "^0.11.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1"
   },
   "devDependencies": {
